# fastapi

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirments.txt
alembic/: env.py
alembic/versions/: 0ad5b4a531f4_user.py  50435f29ab0c_init.py  a8c3e1b2d4f5_create_cart_items_table.py  f0f5f4e0f734_create_products_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  cart.py  db_health.py  health.py  products.py
app/core/: config.py
app/db/: session.py
app/models/: cart_item.py  product.py  user.py
app/repositories/: cart.py  product.py  user.py
app/schemas/: cart.py  product.py  user.py
app/services/: auth.py  cart.py  product.py
tests/integration/: test_auth.py
tests/unit/: test_auth_sync.py  test_cart_sync.py  test_health.py  test_products_sync.py
